networking/traefik-edge/affiliate-public.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: edge-affiliate-public
  namespace: traefik-edge
  annotations:
    external-dns.alpha.kubernetes.io/hostname: affiliate.skirmshop.es,go.skirmshop.es
    external-dns.alpha.kubernetes.io/target: 141.94.73.52,141.94.73.50,145.239.194.168,57.129.17.172
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
spec:
  entryPoints:
  - websecure
  ingressClassName: traefik-edge
  routes:
  - kind: Rule
    match: Host(`affiliate.skirmshop.es`) || Host(`go.skirmshop.es`)
    services:
    - name: affiliate-app
      namespace: skirmshop
      port: 80
  tls:
    secretName: affiliate-skirmshop-tls
