networking/traefik-edge/harbor-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: harbor-public
  namespace: traefik-edge
  annotations:
    external-dns.alpha.kubernetes.io/hostname: harbor.e-dani.com
    external-dns.alpha.kubernetes.io/target: 141.94.73.52,141.94.73.50,145.239.194.168,57.129.17.172
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
spec:
  entryPoints:
  - websecure
  ingressClassName: traefik-edge
  routes:
  - kind: Rule
    match: Host(`harbor.e-dani.com`)
    services:
    - name: harbor
      namespace: harbor
      port: 80
  tls:
    secretName: wildcard-public-tls
